--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -263,6 +263,17 @@ td.ss_info_name_short{
     min-width:50px;
 }
 
+.agenda_find_free{
+    /* position:absolute; */
+    /* left: 3px; */
+    border: 1px solid #89D;
+    background-color: #EDF5FF;
+    padding: 5px;
+    max-width:  150px;
+    float:left;
+    margin-top:70px;
+    margin-left:3px;
+}
 
 .agenda_save_box {
   position: absolute;
@@ -359,7 +370,7 @@ div#conflict_table {
 
 .spacer{
     background-color:#edf5ff;
-    
+    width:1px;
 }
 .spacer_grip{
    /* background-color:green; */
@@ -369,7 +380,7 @@ div#conflict_table {
    height:100%;
    /* border:1px solid red; */
    float:right;
-   margin-left:-100%;
+/*   margin-left:-100%; */
    padding:0px;
    /* cursor:se-resize; */
 
@@ -383,13 +394,40 @@ background: linear-gradient(to right, #99beff 0%,#1e5799 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', endColorstr='#1e5799',GradientType=1 ); /* IE6-9 */
 }
 
+.ui-resizable{
+    float:right;
+
+}
 .ui-resizable-e{
     cursor: w-resize;
+
 }
 .ui-resizable-w{
     cursor: e-resize;
     
 }
+
+
+.small{
+    font: 13px/1.231 arial,helvetica,clean,sans-serif;
+}
+
+.right{
+    float:right;
+    }
+
+.free_slot{
+    background-color:rgb(0, 102, 153);
+    
+}
+
+.show_conflict_view_highlight{
+    background-color:red;
+}
+
 /* ::-webkit-scrollbar{ */
 /*     width:3px; */
 /* } */
+
+
+.ui-effects-transfer { border: 2px solid black; }
