--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -22,7 +22,7 @@ body {
     width:100px;
     min-width:100px;
     font-size:12px;
-
+    position:relative;
 
 
 
@@ -411,10 +411,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', end
 .small{
     font: 13px/1.231 arial,helvetica,clean,sans-serif;
 }
+.very_small{
+    font: 10px/1.231 arial,helvetica,clean,sans-serif;
+}
+
 
 .right{
     float:right;
-    }
+}
+
+.left{
+    float:left;
+}
 
 .free_slot{
     background-color:rgb(0, 102, 153);
@@ -431,3 +439,45 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', end
 
 
 .ui-effects-transfer { border: 2px solid black; }
+
+
+.hide_room{
+    position:absolute;
+    top:0;
+    left:0;
+}
+.light_blue_border{
+    border: 1px solid #94d3e6;
+    height:100%;
+
+
+}
+
+.close{
+    cursor:pointer;
+    background-color:white;
+    color:black;
+    min-width:11px;
+    width:11px;
+    max-width:11px;
+    min-height:11px;
+    height:11px;
+    max-height:11px;
+
+    border-radius: 50%;
+}
+
+.minimal_table{
+    border-collapse:collapse;
+    margin:0px;
+
+}
+
+
+.small_button{
+    /* padding-top:1px; */
+    /* padding-bottom:1px; */
+    font-size:8px;
+    background-color:white;
+    cursor:pointer;
+}
