hiding days implemented, minor visual tweaks

--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -45,7 +45,8 @@ function my_js_callback(data){
 
 var meeting_base_url = "{{ meeting_base_url }}";
 var site_base_url = "{{ site_base_url }}";
-
+total_days = {{time_slices|length}};
+total_rooms = {{rooms|length}};
 function setup_slots(){
 {% for day in time_slices %}
     days.push("{{day}}");
@@ -123,23 +124,25 @@ function setup_slots(){
 <table id="meetings" class="ietf-navbar" style="width:100%">
   <th class="schedule_title"><span id="schedule_name">name: {{schedule.name}}</span><div id="spinner"><!-- spinney goes here --></div></th>
 {% for day in time_slices %} 
-  <th colspan="{{date_slices|colWidth:day}}" id="{{day|date:'Y-m-d'}}-btn" class="agenda_slot_title">{{day|date:'D'}}&nbsp;({{day}})  
-  
+  <th colspan="{{date_slices|colWidth:day}}" id="{{day|date:'Y-m-d'}}-btn" class=" day_{{day}} agenda_slot_title">
+    <div id="close_{{day|date:'Y-m-d'}}" class="close top_left very_small close_day">x</div>
+    {{day|date:'D'}}&nbsp;({{day}})  
+ 
   </th>
-  <th class="spacer {{day|date:'Y-m-d'}}-spacer" id="">
+  <th class="day_{{day}} spacer {{day|date:'Y-m-d'}}-spacer" id="">
     <div class="ui-widget-content ui-resizable" id="resize-{{day|date:'Y-m-d'}}-spacer">
       <div class="spacer_grip ui-resizable-handle ui-resizable-e"></div>
     </div>
 </th>
 {% endfor %}
     <tr>
-      <th><span class="very_small left">hidden rooms:<span id="hidden_rooms">0</span></span><span class="right"><button class="small_button" id="show_hidden_rooms">Show</button></span></th>
+      <th></th>
     {% for day in time_slices %}
 	  {% for slot in date_slices|lookup:day %}
-	      <th class="room_title">{{slot.0|date:'Hi'}}-{{slot.1|date:'Hi'}} </th>
+	      <th class="day_{{day}} room_title">{{slot.0|date:'Hi'}}-{{slot.1|date:'Hi'}} </th>
 
 	  {% endfor %}
-              <th class="spacer {{day|date:'Y-m-d'}}-spacer">
+              <th class="day_{{day}} spacer {{day|date:'Y-m-d'}}-spacer">
 	      </div></th>
 
     {% endfor %}
@@ -151,16 +154,15 @@ function setup_slots(){
   {% for r in rooms %} 
   <tr id="{{r|to_acceptable_id}}" class="agenda_slot"> 
     <th class="vert_time">
-      <table class="minimal_table">
-	<tr><td><div class="close very_small" id="close_{{r|to_acceptable_id}}">X</div></td><td></td></tr>
-	<tr><td></td><td>{{r}}</td></tr>
-      </table>
+      <div class="close very_small close_room top_left small_button" id="close_{{r|to_acceptable_id}}">X</div>
+      <div style="margin-left:12px;" class="right">{{r}}</div>
+      
       <!-- <span class="hide_room light_blue_border">X</span><span class="left">{{r}}</span></th> -->
     {% for day in time_slices %}
       {% for slot in date_slices|lookup:day %}
-        <td id="{{r|slugify}}_{{day}}_{{slot.0|date:'Hi'}}" class="agenda-column-{{day}}-{{slot.0|date:'Hi'}} agenda_slot {% cycle 'alt' '' %}" ></td>
+        <td id="{{r|slugify}}_{{day}}_{{slot.0|date:'Hi'}}" class="day_{{day}} agenda-column-{{day}}-{{slot.0|date:'Hi'}} agenda_slot {% cycle 'alt' '' %}" ></td>
       {% endfor %}
-        <td class="spacer {{day|date:'Y-m-d'}}-spacer"></td>
+        <td class="day_{{day}} spacer {{day|date:'Y-m-d'}}-spacer"></td>
     {% endfor %}
   </tr>
   {% endfor %}
@@ -236,15 +238,29 @@ function setup_slots(){
 	</tbody>
       </table>
     </div>
-    <div class="agenda_find_free"><button id="find_free">Find Free</button></div>
+    <div class="agenda_find_free"><button class="small_button" id="find_free">Find Free</button></div>
     <div class="color_legend">
       {% for area in area_list %}
       <span class="{{area.upcase_acronym}}-scheme"><input class='color_checkboxes' type="checkbox" id="{{area.upcase_acronym}}" value="{{area.upcase_acronym}}-value" checked>{{area.upcase_acronym}}</span>
       {% endfor %}
     </div>
   </div>
+  
+  <div class="show_hidden_things">
+    <div class="hide_buttons">
+      <div class="very_small left">hidden rooms:<span id="hidden_rooms" >0/{{rooms|length}}</span></div>
+      <div class="right"><button class="small_button" id="show_hidden_rooms">Show</button></div>
+    </div>
+    
+    <div class="hide_buttons">
+      <div class="very_small left">hidden days:<span id="hidden_days" >0/{{time_slices|length}}</span></div>
+      <div class="right"><button class="small_button" id="show_hidden_days">Show</button></div>
+    </div>
+    
+  </div>
 
   <div class="agenda_save_box">
+    
     <div id="agenda_title"><b>Agenda name: </b><span>{{schedule.name}}</span></div>
     <div id="agenda_saveas">
       <form action="{{saveasurl}}" method="post">{% csrf_token %}
