--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -463,7 +463,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', end
 
 }
 .top_left{
-    position:absolute;
+    /* position:absolute; */
     top:0;
     left:0;
 }
