added rudamentary addroom and addday forms #6251

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -582,3 +582,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', end
     margin: 5px 5px 3px 1px;
 }
 
+#addroom_form {
+}
+
+#addday_form {
+}
