--- a/ietf/templates/meeting/timeslot_edit.html
+++ b/ietf/templates/meeting/timeslot_edit.html
@@ -131,6 +131,24 @@ function setup_slots(){
 </table>
 
 </div>
+<div id="addroom_form">
+   <form action="{{addroomurl}}" method="post">{% csrf_token %}
+      <table>
+        {{ addroom.as_table }}
+      <tr><td><input type="submit" name="addroom" value="addroom"></td></tr>
+      </table>
+   </form>
+   <div id="addform_cancel">X</div>
+</div>
+<div id="addday_form">
+   <table>
+      <form action="{{adddayurl}}" method="post">{% csrf_token %}
+        {{ addday.as_table }}
+        <tr><td><input type="submit" name="addday" value="addday"></td></tr>
+      </form>
+   </table>
+   <div id="addday_cancel">X</div>
+</div>
 
 {% if server_mode %}
 	{% ifnotequal server_mode "production" %}
