free slots highlight as green instead of red, fixed other issues relating to the historic use of .css('background' instead of .addClass

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -528,6 +528,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', end
 
 }
 
+.highlight_free_slot{
+    background-color:green;
+
+}
+
 
 #show_all{
     
