added click handler to bring up dialog to delete room #6251

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -587,3 +587,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', end
 
 #addday_form {
 }
+
+/*
+.ui-dialog {
+    border: 3px solid black;
+    padding: 5px;
+    background-color: #fff;
+}
+*/
+.dialog {
+    display: hidden;
+}
