--- a/ietf/templates/meeting/timeslot_edit.html
+++ b/ietf/templates/meeting/timeslot_edit.html
@@ -9,6 +9,7 @@
 {% load agenda_custom_tags %}
 {% block pagehead %}
 <link rel='stylesheet' type='text/css' href='/css/ietf.css' />
+<link rel='stylesheet' type='text/css' href='/css/jquery-ui-themes/jquery-ui-1.8.11.custom.css' />
 
 <script type='text/javascript' src='/js/jquery-1.8.2.min.js'></script>
 <script type='text/javascript' src='/js/jquery-ui-1.9.0.custom/jquery-ui.custom.js'></script>
@@ -114,7 +115,7 @@ function setup_slots(){
   {% for r in rooms %}
   <tr id="{{r|to_acceptable_id}}" class="agenda_slot">
     <th class="vert_time">
-      <div class="delete delete_room bottom_left" id="delete_{{r|to_acceptable_id}}">X</div>
+      <div class="delete delete_room bottom_left" id="delete_{{r|to_acceptable_id}}" roomid="{{r.pk}}">X</div>
       <div class="right room_name">{{r}}</div>
 
       <!-- <span class="hide_room light_blue_border">X</span><span class="left">{{r}}</span></th> -->
@@ -146,6 +147,10 @@ function setup_slots(){
       </form>
    </table>
    <div id="addday_cancel">X</div>
+</div>
+
+<div class="dialog" id="room_delete_dialog">
+     Are you sure you want to delete this room?
 </div>
 
 {% if server_mode %}
