--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -163,7 +163,7 @@ function setup_slots(){
   <tr id="{{r|to_acceptable_id}}" class="agenda_slot">
     <th class="vert_time">
       <div class="close very_small close_room top_left small_button" id="close_{{r|to_acceptable_id}}">X</div>
-      <div class="right room_name">{{r}}</div>
+      <div class="right room_name">{{r}} <span class="capacity">({{r.capacity}})</span></div>
 
       <!-- <span class="hide_room light_blue_border">X</span><span class="left">{{r}}</span></th> -->
     {% for day in time_slices %}
